# 2023_SummerLecture

./: 01_1.PythonIntorduction.ipynb  02_1.Regression1.ipynb  03_1.ClassifierPerceptron.ipynb  03_2.SVMClassifier.ipynb  04_1.Classification1D.ipynb  04_2.Classification2D.ipynb  04_4.MNISTLogReg1.ipynb  05_1.ClassificationMLP3.ipynb  06_2.MNISTMLP3.ipynb  07_1.MNISTConv3.ipynb  README.md  diffusion_test.ipynb  pyproject.toml
