[tool.poetry]
name = "2023-熊大集中講義"
version = "0.1.0"
description = ""
authors = ["Hayaru SHOUNO <shouno@uec.ac.jp>"]
license = "MIT"
readme = "README.md"
packages = [{include = "2023"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.25.1"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
scipy = "^1.11.1"
torch = "^2.0.1"
torchvision = "^0.15.2"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"
statsmodels = "^0.14.0"
ipykernel = "^6.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
